--- a/projects/lab5/CMakeLists.txt
+++ b/projects/lab5/CMakeLists.txt
@@ -9,7 +9,7 @@ FILE(GLOB lab5_sources code/*.cc)
 SET(files_lab5 ${lab5_headers} ${lab5_sources})
 SOURCE_GROUP("lab5" FILES ${files_lab5})
 
-ADD_EXECUTABLE(lab5 ${files_lab5})
+ADD_EXECUTABLE(lab5 ${files_lab5} "code/softwarerasterizer.cpp")
 TARGET_LINK_LIBRARIES(lab5 core render)
 ADD_DEPENDENCIES(lab5 core render)
 
